// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<AdaptableGrid /> by default matches with snapshot 1`] = `
<div
  className="adaptable-grid__StyledGrid-txsbu0-0 kscnci"
>
  <div
    className="adaptable-grid__StyledGridCol-txsbu0-1 fmGblY"
  >
    Test
  </div>
  <div
    className="adaptable-grid__StyledGridCol-txsbu0-1 gZQldn"
  >
    Test
  </div>
</div>
`;

exports[`<AdaptableGrid /> with className matches with snapshot 1`] = `
<div
  className="my_classname adaptable-grid__StyledGrid-txsbu0-0 kscnci"
>
  <div
    className="my_second_classname adaptable-grid__StyledGridCol-txsbu0-1 gxolfR"
  >
    Test
  </div>
  <div
    className="my_third_classname adaptable-grid__StyledGridCol-txsbu0-1 gxolfR"
  >
    Test
  </div>
</div>
`;

exports[`<AdaptableGrid /> with custom HTML tags matches with snapshot 1`] = `
<dl
  className="adaptable-grid__StyledGrid-txsbu0-0 kscnci"
>
  <dd
    className="adaptable-grid__StyledGridCol-txsbu0-1 fmGblY"
  >
    Test
  </dd>
  <dt
    className="adaptable-grid__StyledGridCol-txsbu0-1 gZQldn"
  >
    Test
  </dt>
</dl>
`;

exports[`<AdaptableGrid /> with some props matches with snapshot 1`] = `
<div
  className="adaptable-grid__StyledGrid-txsbu0-0 cSerqo"
>
  <div
    className="adaptable-grid__StyledGridCol-txsbu0-1 kKqTcF"
    offset={3}
  >
    Test
  </div>
  <div
    className="adaptable-grid__StyledGridCol-txsbu0-1 gxolfR"
  >
    Test
  </div>
</div>
`;
